# project-build

./: .gitignore  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_doc.txt
api/: main.py
docker/: base.dockerfile
